TAG: annotload-6-0-22-1
DATE: 10/17/2022
STAFF: lec
wts2-1012/Allele Rollup not including all back-references
add duplicate checks:  isMPAllele, isDiseaseAllele 

TAG: annotload-6-0-18-2
DATE: 03/23/2022
STAFF: lec
wts2-703/new Noctua -> GO Annotation pipeline

TAG: annotload-6-0-18-1
DATE: 02/21/2022
STAFF: lec
wts2-767/mgi_notechunk/mgi_note merge

TAG: annotload-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG: annotload-6-0-15-1
DATE: 12/02/2019
STAFF: lec 
CHANGES: TR13007/RNA Sequence project
add VOC_Evidence_Property autosequence

TAG: annotload-6-0-14-1
DATE: 04/03/2019
STAFF: lec 
TR12963/teleuse-to-mgd_java_api

TAG: annotload-6-0-13-1
DATE: 10/15/2018
STAFF: lec
CHANGES: TR12734/GeneFeVah: processMcv needs to use configuration value to determine annnotation type

TAG: annotload-6-0-12-1
DATE: 03/07/2018
STAFF: lec
CHANGES: TR12662/GMC/autosequence changes

TAG: annotload-6-0-10-1
DATE:04/27/2017
STAFF: sc
CHANGES: Merge tr12540 branch to trunk

TAG: annotload-tr12540-1
DATE:04/24/2017
STAFF: sc
CHANGES: annotload.py - remove call to ALL_postMP SP

TAG: annotload-tr12540-BP
DATE:04/24/2017
STAFF: sc
CHANGES: TR12556 issue updating DMDD MP headers/SP memory issue
This is the scrum-dog project branch as this will go w/their release

TAG: annotload-6-0-8-1
DATE: 10/31/2016, 02/14/2017
STAFF: lec
CHANGES: TR12427/Disease Ontology (DO)
obsolete: remove db.setAutoTranslate

TAG: annotload-6-0-6-1
DATE: 09/08/2016
STAFF: lec
CHANGES: TR12345/GO-Noctua/GPAD/GPI

TAG: annotload-tr12349
DATE: 08/10/2016
STAFF: lec
CHANGES: branch tag for TR12349 

TAG: annotload-6-0-5-1
DATE: 07/05/2016
STAFF: sc
CHANGES: Merge tr12267 to trunk

TAG: annotload-tr12267-1
DATE: 06/14/2016
STAFF: sc
CHANGES: annotload.py Added recognitions of OMIM/HPO annotations

TAG: annotload-6-0-3-2
TAG: annotload-6-0-3-1
DATE: 03/23/2016
STAFF: lec 
CHANGES: removed comments regarding old max length values for note chunks

TAG: annotload-6-0-2-1
DATE: 12/09/2015
STAFF: lec